[package]
name = "tokio-fastcgi"
description = "FastCGI application (responder, authorizer, filter) library for Tokio"
license = "Apache-2.0"
#keywords = [ "settings", "config", "configuration", "environment", "env" ]
#categories = [ "config", "parsing" ]
version = "0.1.0"
authors = ["Daniel Goß <developer@flashsystems.de>"]
edition = "2018"
homepage = "https://github.com/FlashSystems/tokio-fastcgi"
repository = "https://github.com/FlashSystems/tokio-fastcgi"
readme = "README.md"
exclude = [ "*.code-workspace", ".vscode" ]

[dependencies]
tokio = { version = "1.7", features = ["rt", "io-util", "macros", "sync"] }
log = "0.4"
byteorder = "1.4"

[dev-dependencies]
tokio = { version = "1.7", features = ["test-util", "net", "rt-multi-thread"] }
tokio-test = "0.4"
async-trait = "0.1"
once_cell = "1.7"